centrer le texte et redimensionnement image

--- a/formation.html
+++ b/formation.html
@@ -26,8 +26,8 @@
                     <li class="nav-item"><a class="nav-link" href="#">Acceuil</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Fabrique</a></li>
                     <li class="nav-item"><a class="nav-link active" href="#">Formations</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Partenariat</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Espace</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Partenariats</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Espaces</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Entités</a></li>
                     <li class="nav-item-dropdown"><i class="bi bi-search"></i>
                     <li class="nav-item"><a class="nav-link dropdown-toggle" data-bs-toggler="dropdown" href="#">Fr</a>
@@ -45,21 +45,17 @@
 
     <section class="banniere">
         <figure>
-            <img src="../Simplon-site/images/imagbanniere.jpg" class="img-fluid" id="imgBan" alt="" srcset="">
+            <img src="../Simplon-site/images/imagbanniere.jpg"  class="img-fluid" id="imgBan" alt="" srcset="">
         </figure>
-        <div
-            style="position:absolute;top:360px; width:600px; height:auto; z-index:2;-size:200%; color:white; font-family: nunio sans;">
-            <h1>FORMATIONS</h1>
+        <div>
+            <h1 class="title-age">FORMATIONS</h1>
         </div>
     </section>
 
     <!------- Intégration de la barre de recherche et responsivité -------->
 
     <section>
-        <form class="form-group">
-            <input type="search" placeholder="Rechercher des formations" aria-label="Search">
-            <button class="btn btn-danger" type="submit"><i class="bi bi-search"></i></button>
-        </form>
+        
     </section>
 
     <!------- Intégration de la Banniére et responsivité -------->
