--- a/formation.html
+++ b/formation.html
@@ -76,7 +76,7 @@
                 <div class="row">
                     <h2 class="title mt-5">PAR PARCOURS</h2>
                     <div class="traitdessous">
-                        <hr size="4" width="6%">
+                        <hr size="6" width="6%">
                     </div>
                     <p class="lh-base mt-2 mr-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
                         repellendus
@@ -101,7 +101,7 @@
                         <div class="bar d-flex flex-column justify-content-center">
                             <div class="nav-bar-subdivision d-flex flex-column justify-content-between">
                                 <div class="rectangle d-flex justify-content-start align-items-center">
-                                    <img src="images/discover.svg" alt="">
+                                    <img src="images/discover   .svg" class="icons" alt="">
                                     <h5 class="btn btn-danger">Découverte</h5>
                                 </div>
                                 <div class="rectangle d-flex justify-content-start align-items-center">
@@ -110,7 +110,7 @@
                                 </div>
                                 <div class="rectangle d-flex justify-content-start align-items-center">
                                     <img src="" alt="">
-                                    <h5 class="btn btn-danger">Metier</h5>
+                                    <h5 class="btn btn-danger">Métier</h5>
                                 </div>
                             </div>
                         </div>
@@ -312,7 +312,85 @@
 
         <!--Intégration des card et responsivité -->
 
-        
+        <section class="container overflow-hidden">
+            <article>
+                <div class="row">
+                    <h2 class="title mt-5">PAR PARTENARIAT</h2>
+                    <div class="traitdessous">
+                        <hr size="4" width="6%">
+                    </div>
+                    <p class="lh-base mt-2 mr-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+                        repellendus
+                        vitae
+                        rem nostrum nemo iusto,
+                        quidem labore nisi beatae error quas nam aperiam rerum commodi corrupti expedita asperiores
+                        pariatur
+                        voluptatum?
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellendus vitae rem nostrum nemo
+                        iusto,
+                        quidem labore nisi beatae error quas nam aperiam rerum commodi corrupti expedita asperiores
+                        pariatur
+                        voluptatum?
+                    </p>
+                </div>
+            </article>
+
+            <section class="parpartenariat">
+                <div class="row">
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="card text-center mb-4">
+                            <p class="card-header bg-danger img-card text-center d-flex align-items-center text-white ">
+                                Some quick example text to build on the card title and make up
+                                bulk of the card's content.</p>
+                            <img src="../Simplon-site/images/rectangle.svg" class="triangle" alt="">
+                            <div class="card-body h-50 mt-4 ">
+                                <img src="images/microsoft.png" alt="...">
+                                <p class="card-text mt-2">Some quick example text to build on the card title and make up
+                                    the
+                                    bulk of the card's content.
+                                </p>
+                                <a href="#" class="btn btn-danger rounded-pill">Decouvrir la formation</a>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="card text-center mb-4">
+                            <p class="card-header bg-danger img-card text-center d-flex align-items-center text-white ">
+                                Some quick example text to build on the card title and make up
+                                bulk of the card's content.</p>
+                            <img src="../Simplon-site/images/rectangle.svg" class="triangle" alt="">
+                            <div class="card-body h-50 mt-4 ">
+                                <img src="images/iese.png" alt="...">
+                                <p class="card-text mt-2">Some quick example text to build on the card title and make up
+                                    the
+                                    bulk of the card's content.
+                                </p>
+                                <a href="#" class="btn btn-danger rounded-pill">Decouvrir la formation</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="card text-center mb-4">
+                            <p class="card-header bg-danger img-card text-center d-flex align-items-center text-white ">
+                                Some quick example text to build on the card title and make up
+                                bulk of the card's content.</p>
+                            <img src="../Simplon-site/images/rectangle.svg" class="triangle" alt=" ">
+                            <div class="card-body h-50 mt-4 ">
+                                <img src="images/microsoft.png" alt="...">
+                                <p class="card-text mt-2">Some quick example text to build on the card title and make up
+                                    the
+                                    bulk of the card's content.
+                                </p>
+                                <a href="#" class="btn btn-danger rounded-pill">Decouvrir la formation</a>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </section>
+
     </main>
     <script src="../Simplon-site/bootstrap/js/bootstrap.min.js"></script>
 </body>
